tests/error/array_errors/array_index_positive_oob.err
Error: Index out of bounds (at $FILE:7:14)
  | 
5 | def main() -> int:
6 |    arr = array(i for i in range(5))
7 |    return arr[10]
  |               ^^ Array index 10 is out of bounds for array of size 5.

Guppy compilation failed due to 1 previous error
